fix: scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -3,16 +3,47 @@
 @tailwind utilities;
 
 @layer utilities {
-	/* Hide scrollbar for Chrome, Safari and Opera */
-	.no-scrollbar::-webkit-scrollbar {
+	body {
+		overflow-x: hidden;
+	}
+	*::-webkit-scrollbar {
+		display: block;
+		width: var(--sds, 14px);
+		/* position: absolute; */
+	}
+
+	*::-webkit-scrollbar-button {
 		display: none;
 	}
 
-	/* Hide scrollbar for IE, Edge and Firefox */
-	.no-scrollbar {
-		-ms-overflow-style: none; /* IE and Edge */
-		scrollbar-width: none; /* Firefox */
+	*::-webkit-scrollbar-track {
+		/* background-color: #000000; */
+		@apply bg-orange-100 dark:bg-stone-950;
 	}
+
+	*::-webkit-scrollbar-track-piece {
+		background-color: #00000000;
+	}
+
+	*::-webkit-scrollbar-thumb {
+		background-color: #00000040;
+		border: 1px solid #ffffff40;
+		border-radius: 24px;
+	}
+
+	:is(.dark) {
+		--scroll-bg: theme(colors.stone.800);
+	}
+
+	/* box-sizing: /; */
+	*::-webkit-scrollbar-thumb {
+		background-color: #00000000;
+		border: 5px solid transparent;
+
+		border-radius: 24px;
+		box-shadow: 4px 0px 0px 4px var(--scroll-bg, theme(colors.orange.500)) inset;
+	}
+
 	@font-face {
 		font-family: 'visby';
 		src: url('/src/lib/font/VisbyRoundCF-Regular.woff') format('woff');
